[gd_scene load_steps=6 format=3 uid="uid://cy5wia0p6rqke"]

[ext_resource type="PackedScene" uid="uid://hjfp4bpi7lyd" path="res://scenes/ui/LevelGrid.tscn" id="1_b78wj"]
[ext_resource type="Script" path="res://scenes/ui/LevelMenu.gd" id="1_edlih"]
[ext_resource type="Texture2D" uid="uid://bbna1n3x4texq" path="res://sprites/ui/Left-Arrow.png" id="2_gmrwi"]
[ext_resource type="Resource" uid="uid://bd0kdwxelnu2w" path="res://resources/LevelsData.tres" id="2_h0xxw"]
[ext_resource type="Texture2D" uid="uid://bv6iqswkrqkta" path="res://sprites/ui/Right-Arrow.png" id="4_1sv1c"]

[node name="LevelMenu" type="MarginContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -199.0
offset_top = -363.0
offset_right = 199.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_edlih")
levels = ExtResource("2_h0xxw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_gmrwi")
stretch_mode = 3

[node name="ClipControl" type="Control" parent="VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(350, 230)
layout_mode = 2

[node name="GridBox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/ClipControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelGrid" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox" instance=ExtResource("1_b78wj")]
layout_mode = 2

[node name="LevelGrid2" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox" instance=ExtResource("1_b78wj")]
layout_mode = 2

[node name="NextButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_1sv1c")
stretch_mode = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
